css/site.css
/* ... */
@media screen and (max-width: 800px) {
  .container {
    width: 1272px;
  }
  .col {
    margin-left: 8px;
    margin-right: 8px;
  }
  .col-1 {
    width: 90px;
  }
  .col-2 {
    width: 196px;
  }
  .col-3 {
    width: 302px;
  }
  .col-4 {
    width: 408px;
  }
  .col-5 {
    width: 514px;
  }
  .col-6 {
    width: 620px;
  }
  .col-7 {
    width: 726px;
  }
  .col-8 {
    width: 832px;
  }
  .col-9 {
    width: 938px;
  }
  .col-10 {
    width: 1044px;
  }
  .col-11 {
    width: 1150px;
  }
  .col-12 {
    width: 1256px;
  }
  html {
    font-size: 17px;
    letter-spacing: 0.001em;
  }
  body {
    line-height: 1.35;
  }
  h1 {
    font-size: 2.617924rem;
    line-height: 1.15;
  }
  h2 {
    font-size: 2.058106176075472rem;
    line-height: 1.15;
  }
  h3 {
    font-size: 1.400505962399693rem;
  }
  .font-copy {
    font-size: 17px;
    line-height: 1.45;
  }
  .only-desktop {
    display: none;
  }
  .only-mobile {
    display: initial;
  }
  .margin-top-micro {
    margin-top: 4.944271909998838px;
  }
  .margin-top-tiny {
    margin-top: 8px;
  }
  .margin-top-small {
    margin-top: 16px;
  }
  .margin-top-basic {
    margin-top: 32px;
  }
  .margin-top-mid {
    margin-top: 56px;
  }
  .margin-top-large {
    margin-top: 80px;
  }
  .margin-bottom-micro {
    margin-bottom: 4.944271909998838px;
  }
  .margin-bottom-tiny {
    margin-bottom: 8px;
  }
  .margin-bottom-small {
    margin-bottom: 16px;
  }
  .margin-bottom-basic {
    margin-bottom: 32px;
  }
  .margin-bottom-mid {
    margin-bottom: 56px;
  }
  .margin-bottom-large {
    margin-bottom: 80px;
  }
  .padding-top-micro {
    padding-top: 4.944271909998838px;
  }
  .padding-top-tiny {
    padding-top: 8px;
  }
  .padding-top-small {
    padding-top: 16px;
  }
  .padding-top-basic {
    padding-top: 32px;
  }
  .padding-top-mid {
    padding-top: 56px;
  }
  .padding-top-large {
    padding-top: 80px;
  }
  .padding-bottom-micro {
    padding-bottom: 4.944271909998838px;
  }
  .padding-bottom-tiny {
    padding-bottom: 8px;
  }
  .padding-bottom-small {
    padding-bottom: 16px;
  }
  .padding-bottom-basic {
    padding-bottom: 32px;
  }
  .padding-bottom-mid {
    padding-bottom: 56px;
  }
  .padding-bottom-large {
    padding-bottom: 80px;
  }
  #menus {
    width: 100%;
  }
  #menus.main-menu-active #main-content .menu-column-content {
    overflow: hidden;
  }
  .menu-column {
    float: none;
    width: 100%;
  }
  .menu-column .menu-column-top:after {
    background-size: 10px 10px;
    width: 10px;
    height: 10px;
    right: 8px;
    top: 9px;
  }
  .menu-column-top {
    background-color: rgba(0,0,0,0.75);
    padding: 6px 12px;
    margin-bottom: 1px;
    margin-right: 1px;
  }
  .menu-column-content li {
    background-color: rgba(0,0,0,0.75);
    padding: 6px 12px;
    margin-bottom: 1px;
    margin-right: 1px;
  }
  .menu-background {
    background-color: rgba(0,0,0,0.75);
    padding: 6px 12px;
    margin-bottom: 1px;
    margin-right: 1px;
  }
  #main-menu .menu-column-top:after {
    display: none;
  }
  #main-menu .menu-column-content {
    display: none;
  }
  #mobile-studio-submenu {
    width: 100%;
    display: none;
  }
  #mobile-studio-submenu li {
    padding-left: 24px;
  }
  #mobile-studio-submenu li:before {
    content: '\21B3';
    padding-right: 5px;
  }
  #main-content {
    width: 100%;
    overflow-y: auto;
  }
  #main-content .menu-column-top {
    display: none;
  }
  #mobile-logo-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 90;
  }
  #mobile-logo-overlay .u-flex-center {
    height: 100vh;
  }
  #mobile-logo-overlay svg {
    width: 170px;
    height: 156px;
  }
  #mobile-logo-overlay svg path {
    fill: #fdfdfd;
  }
  #news-post-shim {
    display: none;
  }
  .news-header .news-post-title-holder:hover {
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
    opacity: 0;
  }
  .news-post-mobile-header {
    display: block;
    margin-bottom: 8px;
    color: #969696;
  }
  .news-post-content {
    position: relative;
    padding: 16px;
  }
  .news-post-content .news-post-date {
    margin-bottom: 16px;
  }
  .news-post-content .news-post-drawer-close {
    padding: 16px;
  }
  .news-post-close {
    display: none;
  }
  #pagination {
    padding: 32px;
  }
  #mobile-single-project-title {
    display: inline-block;
    padding-left: 8px;
    max-width: 75%;
    vertical-align: bottom;
  }
  #mobile-single-project-info-toggle {
    float: right;
    color: #ff0;
    text-transform: lowercase;
  }
  .single-project #main-content .menu-column-top:after {
    font-size: 1rem;
    content: 'INFO';
    padding: 6px 8px;
    color: #ff0;
    background-image: none;
    top: 0;
    right: 0;
    width: auto;
    height: auto;
  }
  .single-project #main-content .menu-column-content {
    display: none;
  }
  #images {
    -webkit-box-align: start;
    -ms-align-items: flex-start;
    -ms-flex-align: start;
        align-items: flex-start;
  }
  #project-images {
    padding-top: 30px;
  }
  .mobile-project-image {
    display: block;
    margin-bottom: 1px;
  }
  .post-type-archive-people .people-header {
    position: relative;
  }
  .post-type-archive-people .people-header:after {
    background-size: 10px 10px;
    width: 10px;
    height: 10px;
    right: 0px;
    top: 4px;
  }
  .post-type-archive-people .people-copy {
    padding-bottom: 8px;
  }
}
@media screen and (max-width: 460px) {
  .news-masonry-item {
    width: 100%;
  }
}

